Bug 1614183 - Check if PPC __has_include(<sys/auxv.h>). r=kjacobs Some build environment doesn't provide <sys/auxv.h> and this causes build failure, so let's check if that header exists by using __has_include() helper.

Signed-off-by: Giulio Benetti <giulio.benetti@benettiengineering.com>