lib/freebl/blinit.c
@@ -452,8 +452,14 @@ ppc_crypto_support()
 
 #if defined(__powerpc__)
 
+#ifndef __has_include
+#define __has_include(x) 0
+#endif
+
 #if defined(__linux__) || (defined(__FreeBSD__) && __FreeBSD__ >= 12)
+#if __has_include(<sys/auxv.h>)
 #include <sys/auxv.h>
+#endif
 #elif (defined(__FreeBSD__) && __FreeBSD__ < 12)
 #include <sys/sysctl.h>
 #endif
@@ -470,10 +476,14 @@ CheckPPCSupport()
 
     unsigned long hwcaps = 0;
 #if defined(__linux__)
+#if __has_include(<sys/auxv.h>)
     hwcaps = getauxval(AT_HWCAP2);
+#endif
 #elif defined(__FreeBSD__)
 #if __FreeBSD__ >= 12
+#if __has_include(<sys/auxv.h>)
     elf_aux_info(AT_HWCAP2, &hwcaps, sizeof(hwcaps));
+#endif
 #else
     size_t len = sizeof(hwcaps);
     sysctlbyname("hw.cpu_features2", &hwcaps, &len, NULL, 0);
